--- a/package.json
+++ b/package.json
@@ -27,6 +27,12 @@
       "@babel/preset-react"
     ]
   },
+  "eslintConfig": {
+    "extends": "eda",
+    "ignorePatterns": [
+      "bundle.js"
+    ]
+  },
   "dependencies": {
     "express": "^4.17.1",
     "knex": "^0.21.17",
@@ -41,6 +47,7 @@
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "eslint": "^7.19.0",
+    "eslint-config-eda": "^0.1.4",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
